CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(testSurface)
FIND_PACKAGE(DGtal REQUIRED)
INCLUDE_DIRECTORIES(${DGTAL_INCLUDE_DIRS})
LINK_DIRECTORIES(${DGTAL_LIBRARY_DIRS})


include_directories(/home/florent/Documents/DGtal/tutorials-copy/include/)
ADD_EXECUTABLE(TestSurfaceTraversal testSurfaceTraversal.cpp)
ADD_EXECUTABLE(TestMorphomaths testMorphomaths.cpp)
TARGET_LINK_LIBRARIES(TestSurfaceTraversal ${DGTAL_LIBRARIES} ${Boost_LIBRAIRIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} )
TARGET_LINK_LIBRARIES(TestMorphomaths ${DGTAL_LIBRARIES} ${Boost_LIBRAIRIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} )
